--- a/workshop 17.11(spring)/src/main/resources/application.properties
+++ b/workshop 17.11(spring)/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/rentcar
 spring.datasource.username=postgres
@@ -7,4 +7,4 @@ spring.datasource.password=test
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.properties.javax.persistence.validation.mode=auto
-spring.jpa.hibernate.dll-auto=validate
+spring.jpa.hibernate.ddl-auto=validate
